<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="clear_message">清空</string>
    <string name="button_send">Send</string>
    <string name="add">+</string>
    <string name="backspace">撤销</string>
    <string name="sub">-</string>
    <string name="multiple">X</string>
    <string name="division">/</string>
    <string name="ans">=</string>
    <string name="point">.</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>

</resources>
