<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <Button
        android:id="@+id/button8"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="101dp"
        android:layout_height="90dp"
        android:onClick="Cul"
        android:text="@string/add"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toEndOf="@+id/button11" />

    <Button
        android:id="@+id/button11"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:onClick="Backspace"
        android:text="@string/backspace"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button24"
        app:layout_constraintStart_toEndOf="@+id/button24" />

    <Button
        android:id="@+id/button10"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="111dp"
        android:layout_height="90dp"
        android:onClick="Cul"
        android:text="@string/sub"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:onClick="Cul"
        android:text="@string/multiple"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button18" />

    <Button
        android:id="@+id/button21"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number6"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button20"
        app:layout_constraintStart_toEndOf="@+id/button20" />

    <Button
        android:id="@+id/button20"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number5"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button22" />

    <Button
        android:id="@+id/button22"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number4"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button20"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number8"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number9"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:onClick="sum"
        android:text="@string/ans"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:onClick="Cul"
        android:text="@string/division"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button21" />

    <Button
        android:id="@+id/button23"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="83dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:onClick="clicknumber"
        android:text="@string/number0"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:onClick="Point"
        android:text="@string/point"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button23"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number7"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button16"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number2"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintStart_toEndOf="@+id/button19" />

    <Button
        android:id="@+id/button19"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number1"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button16"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button18"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:onClick="clicknumber"
        android:text="@string/number3"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button16" />

    <TextView
        android:id="@+id/Count_textView"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginBottom="500dp"
        android:gravity="right"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button24"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:onClick="clearnumber"
        android:text="@string/clear_message"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Ram"
        android:layout_width="373dp"
        android:layout_height="90dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="24dp"
        android:gravity="right"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Count_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>